implemeted shapiro test and yeo johnson transformation

--- a/notebooks/experiments.ipynb
+++ b/notebooks/experiments.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "460b18ad",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "34a79fbf",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a4283b99",
    "metadata": {},
    "outputs": [
@@ -302,6 +302,68 @@
    "source": [
     "len(cat.isna().mean()[cat.isna().mean() > 0][cat.isna().mean()[cat.isna().mean() > 0] < 0.05]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6745b23f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking for Normality using Shapiro-Wilk Test\n",
+      "  PassengerId does not appear to be normally distributed.\n",
+      "\n",
+      "  Survived does not appear to be normally distributed.\n",
+      "\n",
+      "  Pclass does not appear to be normally distributed.\n",
+      "\n",
+      "  Age does not appear to be normally distributed.\n",
+      "\n",
+      "  SibSp does not appear to be normally distributed.\n",
+      "\n",
+      "  Parch does not appear to be normally distributed.\n",
+      "\n",
+      "  Fare does not appear to be normally distributed.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import shapiro\n",
+    "\n",
+    "num = num.dropna()\n",
+    "print(f\"Checking for Normality using Shapiro-Wilk Test\")\n",
+    "normal_col = []\n",
+    "not_normal_col = []\n",
+    "for column in num:\n",
+    "    data = num[column]\n",
+    "    if len(data) >= 3:\n",
+    "        stat, p_value = shapiro(data)\n",
+    "        if p_value > 0.05:\n",
+    "            print(f\"  {column} appears to be normally distributed.\\n\")\n",
+    "            normal_col.append(column)\n",
+    "        else:\n",
+    "            print(f\"  {column} does not appear to be normally distributed.\\n\")\n",
+    "            not_normal_col.append(column)\n",
+    "    else:\n",
+    "        raise ValueError(\n",
+    "            f\"Column '{column}' does not have enough data points for the Shapiro-Wilk test.\\n\"\n",
+    "        )\n",
+    "if len(not_normal_col) < num.shape[1]:\n",
+    "    print(f\"Non Normally Distributed Columns are {not_normal_col}\")\n",
+    "    print(f\"Normally Distributed Columns are {normal_col}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5024b77",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
